@@ -6,9 +6,9 @@
 	<name>ChatAppServer</name>
 	<version>1.0</version>
 	<packaging>jar</packaging>
-
+	
 	<properties>
-		<mainClass>main.java.ServerLauncher</mainClass>
+		<mainClass>github.chatapp.server.main.java.ServerLauncher</mainClass>
         <src.resources>src/github/chatapp/server/main/resources</src.resources>
         <target.resources>${project.build.directory}/classes/github/chatapp/server/main/resources/</target.resources>
 	</properties>
@@ -26,13 +26,13 @@
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-all</artifactId>
-			<version>4.1.84.Final</version>
+			<version>4.1.114.Final</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.netty</groupId>
 			<artifactId>netty-tcnative-boringssl-static</artifactId>
-			<version>2.0.54.Final</version>
+			<version>2.0.66.Final</version>
 		</dependency>
 
 		<dependency>
@@ -97,7 +97,7 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>42.5.1</version>
+			<version>42.5.5</version>
 		</dependency>
 
 		<dependency>
@@ -165,18 +165,11 @@
 					<release>17</release>
 				</configuration>
 			</plugin>
-
+			
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
 				<version>3.1.0</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>java</goal>
-						</goals>
-					</execution>
-				</executions>
 				<configuration>
 					<executable>java</executable>
 					<arguments>
@@ -185,6 +178,11 @@
 						<argument>-XX:+UseZGC</argument>
 						<argument>--add-opens</argument>
 						<argument>java.base/java.lang=ALL-UNNAMED</argument>
+						<argument>--add-opens</argument>
+						<argument>java.base/jdk.internal.misc=ALL-UNNAMED</argument>
+						<argument>--add-opens</argument>
+						<argument>java.base/java.nio=ALL-UNNAMED</argument>
+						<argument>-Dio.netty.tryReflectionSetAccessible=true</argument>
 						<argument>-Dfile.encoding=UTF-8</argument>
 						<argument>-classpath</argument>
 						<classpath />
